--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,15 @@ section{
 	transition: all .35s ease;
 }
 .box img{
-	width: 100%;
-	height: auto;
+    width:  100px;
+    height: 100px;
+    
 }
+
+img:hover {
+  transform: scaleX(-1);
+}
+
 .box h4{
 	font-size: 15px;
 	letter-spacing: 1px;
